rename of proliferate

--- a/proliferate/model_drivers/ExampleLj__MD_607867530900_000/README
+++ b/proliferate/model_drivers/ExampleLj__MD_607867530900_000/README
@@ -28,7 +28,7 @@
 #
 
 #
-# Release: This file is part of the openkim-api-v1.0.1 package.
+# Release: This file is part of the openkim-api.git repository.
 #
 
 
